<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ui">
        <EditTextPreference
            android:defaultValue="100"
            android:inputType="number"
            android:key="fontsize"
            android:title="@string/fontsize"/>
        <EditTextPreference
            android:defaultValue="1"
            android:inputType="number"
            android:key="columnnum"
            android:title="@string/columnnum"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/datamgm">
        <Preference
            android:key="data_backup"
            android:title="@string/data_backup"/>
        <Preference
            android:key="data_restore"
            android:title="@string/data_restore"/>
        <Preference
            android:key="frequency_clear"
            android:title="@string/frequency_clear"/>
    </PreferenceCategory>
</PreferenceScreen>